--- a/css/main.css
+++ b/css/main.css
@@ -16,17 +16,21 @@ h1 {
     font-size: 40px;
     font-family: "Karla", sans-serif;
 }
+
 h4 {
     font-family: "Karla", sans-serif;
 }
 
 h2 {
     font-family: "Karla", sans-serif;
-    margin-left: 10px;
+}
+
+h3 {
+    font-family: "Karla", sans-serif;
 }
 
 p {
-    
+
     text-align: justify;
     margin: 10px;
     font-family: "Lato", sans-serif;
@@ -34,13 +38,13 @@ p {
 
 #foto-perfil {
     width: 300px;
-    border-radius: 15px;
-    float: center;
+    border-radius: 5px;
+    float:center;
 }
 
 nav {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding: 20px;
 }
 
@@ -52,4 +56,83 @@ a {
 
 footer {
     font-family: "Lato", sans-serif;
+}
+
+main {
+    overflow: hidden;
+}
+
+section {
+    overflow: hidden;
+}
+
+#proyectos {
+    padding: 20px 30px;
+    border-top: solid 5px #c2ad44;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.proyecto {
+    float: left;
+    width: 33%;
+    margin-top: 20px;
+}
+
+.proyecto img {
+    width: 90%;
+    border-radius: 15px;
+    margin-top: 10px;
+}
+
+.proyecto p {
+    text-align: justify;
+    padding: 10px 20px;
+    color: #82018b;
+    font-family: "Lato", sans-serif;
+}
+
+.proyecto h3 {
+    color: #000;
+    font-weight: lighter;
+
+}
+
+#habilidades {
+    overflow: hidden;
+    margin-top: 20px;
+    padding: 20px;
+    border-top: solid 5px #dddddd;
+    margin-bottom: 30px;
+}
+
+progress {
+    width: 100%;
+    height: 25px;
+    border-radius: 5px;
+    margin: 10px 0;
+}
+
+.lista-tecnologias {
+    list-style: none;
+    display: grid;
+    margin-left: 0;
+    gap: 15px;
+
+}
+
+.lista-tecnologias li {
+    background-color: #dcd136;
+    color: #0a0101;
+    padding: 12px 20px;
+    border-radius: 25px;
+    text-align: center;
+}
+progress::-moz-progress-bar {
+    background-color: #e996c4;
+    background-size: 40px 40px;
+  }
+
+label{
+    font-family: "Montserrat", sans-serif;
 }
