--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 body
 
 header {
-    background: pink;
+    background: #ffc6de;
     text-align: center;
     margin-bottom: 20px;
     padding: 20px;
@@ -26,6 +26,10 @@ h4 {
 
 .bi{
     color:#ffffff
+}
+
+aside{
+    margin-top: 20px;
 }
 
 aside a{
@@ -68,11 +72,12 @@ h3 {
 
 p {
 
-    font-family: "Lato", sans-serif;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;;
 }
 
 .presentacion{
-    font-family: "Lato", sans-serif;
+    font-family: "Montserrat", sans-serif;
     text-align: justify;
     margin: 10px; 
 }
@@ -122,7 +127,6 @@ section {
 .proyecto h3 {
     color: #000;
     font-weight: lighter;
-
 }
 
 #habilidades {
@@ -131,6 +135,10 @@ section {
     padding: 20px;
     border-top: solid 5px #c2ad44;
     margin-bottom: 30px;
+}
+
+#habilidades h3{
+    margin-bottom: 10px;
 }
 
 progress {
@@ -177,6 +185,8 @@ padding: 40px;
     width: 70%;
     clear: both;
     font-size: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 .campos label{
@@ -184,14 +194,35 @@ padding: 40px;
     font-size: medium;
 }
 
-.campos input{
+.campos input, select, span{
     padding: 10px;
     border: solid 2px #ffafe3;
     width: 50%;
     font-size: 15px;
     border-radius: 10px;
+    margin: 20px;
+    font-family: "Karla", sans-serif;
 }
 
+.campos .opciones_contacto{
+    width: 30px;
+}
+
+.campos .opciones_cliente{
+    width: 40px;
+}
+
+.campos button{
+    background-color: #f231b2;
+    color: #ffffff;
+    border: none;
+    font-size: 15px;
+    padding: 15px 10px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 footer{
     overflow: hidden;
