--- a/css/main.css
+++ b/css/main.css
@@ -1,91 +1,114 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Karla:ital,wght@0,200..800;1,200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oranienbaum&display=swap');
 
 * {
     margin: auto;
 }
 
-body
+body {
+    background-color: #4b1e3d;
+    color: #fff;
+    font-family: "Lato", sans-serif;
+}
 
 header {
-    background: #ffc6de;
-    text-align: center;
-    margin-bottom: 20px;
-    padding: 20px;
-    border-bottom: solid 1px #000;
-    border-top: solid 1px #000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 12px 10%;
+    flex-wrap: wrap;
+    background: #d43790;
+    margin-bottom: 10px;
+    border-bottom: solid 1px #f500cc;
+    border-top: solid 1px #ff39ca;
+}
+
+#titulo-nav {
+    font-size: 22px;
+    font-family: "Lato", sans-serif;
 }
 
 h1 {
-    font-size: 40px;
-    font-family: "Karla", sans-serif;
-}
-
-h4 {
-    font-family: "Karla", sans-serif;
-}
-
-.bi{
-    color:#ffffff
-}
-
-aside{
-    margin-top: 20px;
-}
-
-aside a{
-    margin: 20px 20px;
-    text-decoration: none;
-}
-#menu-principal{
-    list-style-type: none;
-    display: flex;
-    font-family: "Karla", sans-serif;
-}
-
-#menu-principal a{
-    text-decoration: none;
-    font-size: 16px;
-    color: #a78e0d;
-    font-weight: bold;
-    padding: 8px;
-}
-
-#menu-principal a:hover{
-    color: #dddddd;
-    background-color: #ffafe3;
-    padding: 8px;
-}
-
-nav{
-    overflow: hidden;
-    margin: 20px 0;
+    font-size: 60px;
+    align-items: left;
+    font-family: "Oranienbaum", serif;
 }
 
 h2 {
-    font-family: "Karla", sans-serif;
-    text-align: center;
+    margin-bottom: 30px;
+    font-size: 40px;
+    font-family: "Oranienbaum", serif;
 }
 
-h3 {
-    font-family: "Karla", sans-serif;
+.bi {
+    color: #ffffff
 }
 
-p {
-
-    font-family: "Montserrat", sans-serif;
-    font-size: 16px;;
+aside {
+    margin: 10px;
 }
 
-.presentacion{
-    font-family: "Montserrat", sans-serif;
-    text-align: justify;
-    margin: 10px; 
+aside a {
+    margin: 20px 10px;
+    text-decoration: none;
+}
+
+nav {
+    overflow: hidden;
+    margin: 5px 0;
+}
+
+#menu-principal {
+    list-style-type: none;
+    display: flex;
+    gap: 50px;
+}
+
+#menu-principal a {
+    text-decoration: none;
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: bold;
+    transition: color 0.3s, border-bottom 0.3s;
+}
+
+#menu-principal a:hover {
+    color: #ffffcf;
+    border-bottom: 2px solid #ff69b4;
+}
+
+/*menu responsivo*/
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #menu-principal {
+        flex-direction: column;
+        gap: 20px;
+    }
+}
+
+#sobre-mi {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    gap: 30px;
+}
+
+#sobre-mi p {
+    font-size: 24px
 }
 
 #foto-perfil {
-    width: 300px;
-    border-radius: 15px;
-    margin: 0 40%   ;
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 3px solid #f7cdd0;
 }
 
 main {
@@ -97,48 +120,85 @@ section {
 }
 
 #proyectos {
-    padding: 20px 30px;
-    border-top: solid 5px #ffa3b4;
-    margin-top: 30px;
+    padding: 100px 30px;
+    margin-top: 40px;
     text-align: center;
 }
 
-#lista-proyectos{
+#lista-proyectos {
     display: flex;
 }
+
 .proyecto {
-    width: 33%;
-    margin-top: 20px;
+    width: 30%;
+    margin-top: 40px;
+    background-color: #fff;
+    border-radius: 10px;
+    border: 3px solid #d43790;
+    transition: transform 0.4s ease, box-shadow 0.4s ease;
+    animation: fadeIn 0.6s ease forwards; 
+}
+
+.proyecto:hover {
+
+    transform: scale(1.08);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+
 }
 
 .proyecto img {
     width: 90%;
     border-radius: 15px;
     margin-top: 10px;
+    border: #f7cdd0 solid 2px;
 }
 
 .proyecto p {
-    text-align: justify;
-    padding: 10px 20px;
-    color: #000000;
-    font-family: "Lato", sans-serif;
+    text-align: center;
+    padding: 20px 20px;
+    color: #0a0101;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .proyecto h3 {
-    color: #000;
-    font-weight: lighter;
+    font-weight: bold;
+    color: #ba5a87;
+    padding: 10px;
+    font-size: 22px;
+    margin-top: 10px;
 }
 
 #habilidades {
     overflow: hidden;
     margin-top: 20px;
-    padding: 20px;
-    border-top: solid 5px #c2ad44;
+    padding: 80px;
+}
+
+#habilidades h2 {
     margin-bottom: 30px;
 }
 
-#habilidades h3{
-    margin-bottom: 10px;
+#habilidades h3 {
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-size: 24px;
+}
+
+.tecnologias {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 50px;
+}
+
+.tecnologias img {
+    width: 100px;
+    height: auto;
+}
+
+#barra-dominio {
+    margin-top: 20px;
 }
 
 progress {
@@ -148,87 +208,110 @@ progress {
     margin: 10px 0;
 }
 
-.lista-tecnologias {
-    list-style: none;
-    display: flex;
-    margin-left: 0;
-    gap: 10px;
-    margin: 30px;
-}
-
-.lista-tecnologias li {
-    background-color: #dcd136;
-    color: #0a0101;
-    padding: 12px 20px;
-    border-radius: 25px;
-    text-align: center;
-
-}
 progress::-moz-progress-bar {
     background-color: #e996c4;
     background-size: 40px 40px;
-  }
-
-label{
-    font-family: "Montserrat", sans-serif;
 }
 
-#contacto{
-padding: 40px;
+#contacto {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 3rem 0;
 }
 
-#contacto p{
-    text-align: center;
+#contacto h2,
+p {
+    margin-bottom: 20px;
 }
 
-.campos{
-    width: 70%;
-    clear: both;
+#contacto p {
     font-size: 20px;
+}
+
+/*formulario*/
+.contenedor-form {
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(253, 197, 197, 0.1);
+    max-width: 450px;
+    width: 90%;
+}
+
+.contenedor-form h2 {
+    color: #353030;
+    text-align: center;
+    font-size: 20px;
+    font-family: "IBM Plex Sans", sans-serif;
+}
+
+.contenedor-form label {
+    display: block;
+    margin-bottom: 0.3rem;
+    color: #333;
+}
+
+.contenedor-form input,
+select {
+    width: 90%;
+    padding: 13px;
+    margin-bottom: 1rem;
+    border: 1px solid #f7cdd0;
+    border-radius: 8px;
+    font-size: 1rem;
+    accent-color: #e91e63;
+}
+
+.contenedor-form select {
+    appearance: none;
+    background-color: #fff;
+    color: #3b3b3b;
+}
+
+.grupo-checkbox {
+    display: flex;
+    gap: 20px;
+    margin: 10px 0;
+}
+
+.opcion {
+    display: flex;
     align-items: center;
-    justify-content: center;
+    gap: 8px;
+    font-size: 16px;
+    cursor: pointer;
 }
 
-.campos label{
-    padding-right: 20px;
-    font-size: medium;
+.opcion input[type="checkbox"] {
+    accent-color: #e91e63;
+    width: 18px;
+    height: 18px;
 }
 
-.campos input, select, span{
-    padding: 10px;
-    border: solid 2px #ffafe3;
-    width: 50%;
-    font-size: 15px;
-    border-radius: 10px;
-    margin: 20px;
-    font-family: "Karla", sans-serif;
-}
 
-.campos .opciones_contacto{
-    width: 30px;
-}
-
-.campos .opciones_cliente{
-    width: 40px;
-}
-
-.campos button{
-    background-color: #f231b2;
-    color: #ffffff;
-    border: none;
-    font-size: 15px;
-    padding: 15px 10px;
-    border-radius: 10px;
+#boton-enviar {
     display: flex;
     justify-content: center;
-    align-items: center;
+    margin-top: 20px;
 }
 
-footer{
+#boton-enviar button {
+    background-color: #ffacec;
+    color: #4b1e3d;
+    padding: 10px 30px;
+    font-size: 16px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;
+}
+
+footer {
     overflow: hidden;
-    padding: 20px 0;
-    background-color: #e7c556;
+    padding: 10px;
+    background-color: #d43790;
     text-align: center;
-    border-top: solid 2px #f0c784;
     font-family: "Lato", sans-serif;
 }
